# tram-ci-cd

./: .gitignore  README.md  build-all.sh
.github/workflows/: ci.yml
cmake/: toolchain-mingw-w64.cmake
editor-dev/: Dockerfile  build.sh
installer/: Dockerfile  build.sh  deps.sh  license.txt  tram-full.iss
integrations/: Dockerfile  deps.sh  run-matrix.sh  run-regression.sh  run-tests.sh  run-unit-tests.sh
integrations/01-teapot-viewer/: CMakeLists.txt  tests.txt
integrations/01-teapot-viewer/scripts/: init.lua
integrations/01-teapot-viewer/src/: main.cpp
linux/: Dockerfile  README.md  build.sh  deps.sh
linux-debian/: Dockerfile
linux-fedora/: Dockerfile
setup/: tram-full.iss
win32/: Dockerfile  build.sh  deps.sh
win64/: Dockerfile  build-fpc-pkgs.sh  build-lazarus-cross.sh  build.sh  deps.sh
